# ot-harjoitustyo

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py  tyoaikakirjanpito.md  vaatimusmaarittely.md
datafile/: tilastot.db
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  rakenne.md  testaus.md  tyoaikakirjanpito.md  vaarinpain_test.py  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
src/: #vaarinpain_ristinolla.py  database_ristinolla.py  game_level.py  init_database.py  ristinolla.py  ristinolla_kayttoliittyma.py  vaarinpain.py
src/datatest/: test_database.db
src/sprites/: Nalle.py  Pupu.py  White.py  nalle_kuva.py  pojan_amongus_kuva.py  sprite_kuvat.py
src/tests/: database_test.py  game_level_test.py  ristinolla_test.py  vaarinpain_test.py
